--- a/app/assets/stylesheets/startup.scss
+++ b/app/assets/stylesheets/startup.scss
@@ -10,3 +10,22 @@ table {
   height:150px;
   overflow-y:auto;
 }
+
+.table-border {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 10%;
+}
+
+#add-button {
+  color: black;
+}
+
+th, td {
+  font-size: 1.3em;
+}
+
+// #33334d
