--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,7 +4,6 @@
       <% if user.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
           <ul>
           <% user.errors.full_messages.each do |message| %>
             <li><%= message %></li>
@@ -14,27 +13,27 @@
       <% end %>
 
       <div class="field">
-        <%= f.label :name %>
-        <%= f.text_field :name %>
+        <%= f.label :name  %>
+        <%= f.text_field :name, class: 'form-control', placeholder: 'Full Name' %>
       </div>
-
+      <br>
       <div class="field">
-        <%= f.label :email %>
-        <%= f.text_field :email %>
+        <%= f.label :email  %>
+        <%= f.email_field :email, class: 'form-control', placeholder: 'Email@example.com' %>
       </div>
-
+      <br>
       <div class="field">
-        <%= f.label :password %>
-        <%= f.password_field :password %>
+        <%= f.label :password  %>
+        <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
       </div>
-
+      <br>
       <div class="field">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation %>
+        <%= f.label :password_confirmation  %>
+        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirm Password' %>
       </div>
-
+      <br>
       <div class="actions">
-        <%= f.submit 'Register' %>
+        <%= f.submit 'Register', class: 'btn btn-default' %>
       </div>
     <% end %>
   </div>
