--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -37,235 +37,6 @@ p {
 	width: 200px;
 }
 
-
-
-
-// .clearfix:after {
-//    content: " ";
-//    display: block;
-//    height: 0;
-//    clear: both;
-// }
-//
-// .clear{
-// 	clear: both;
-// }
-//
-// a {
-// 	text-decoration: none;
-// 	color: #79accd;
-// }
-//
-// a:hover {
-// 	color: #79accd;
-// 	text-decoration: underline;
-// }
-//
-// h1, h2, h3, h4, h5, h6 {
-// 	margin-bottom: 17px;
-// 	font-weight: 300;
-// 	/* color: #ff5400; */
-// }
-//
-// h1 {
-// 	font-size: 28px;
-// }
-//
-// h3 {
-// 	font-size: 24px;
-// 	margin-bottom: 15px;
-// }
-//
-// ul{
-// 	list-style-type: square;
-// 	margin-left: 60px;
-// 	margin-bottom: 30px;
-// }
-//
-// ul li{
-// 	line-height: 1.9;
-// }
-//
-//
-// .zipSearch{
-// 	display: none;
-// }
-//
-// /* Popup */
-// .markerPop{
-//
-// }
-//
-//
-// .twitter{
-// 	float: left;
-// }
-//
-// .facebook{
-// 	float: left;
-// 	width: 150px !important;
-// 	height: 35px !important;
-// }
-//
-// /* tablets and desktop */
-// @media only screen and (min-width: 361px) {
-//
-// 	p {
-// 		margin-bottom: 15px;
-// 		line-height: 20px;
-// 	}
-//
-// 	#map-canvas{
-// 		height: 150%;
-// 	}
-// 	#control{
-// 		float: left;
-// 		color: #D8D8DD;
-// 		width: 15%;
-// 		padding: 50px 30px 10px 30px;
-// 		border-right: 1px solid black;
-// 	}
-//
-// 	#control input[type=text]{
-// 		width: 100%;
-// 		height: 40px;
-// 		font-size: 24px;
-// 		background-color: #6B7283;
-// 		border: 1px solid #BE757E;
-// 	}
-//
-// 	.learnButton {
-// 		margin-top: 10px;
-// 		margin-bottom: 20px;
-// 		background: #BE757E;
-// 		border: 0;
-// 		color: #D8D8DD;
-// 		height: 37px;
-// 		line-height: 37px;
-// 		width: 100%;
-// 		text-align: center;
-// 		cursor: pointer;
-// 	}
-//
-// 	#mc_embed_signup{
-// 	margin-top: 30px;
-// 	float: left;
-// 	width: 300px;
-// 	}
-//
-// 	#mc_embed_signup form label{
-// 		margin-bottom: 30px;
-// 		line-height: 20px;
-// 		clear: right;
-// 	}
-//
-// 	#mc_embed_signup form input.email{
-// 		width: 100%;
-// 		height: 40px;
-// 		font-size: 24px;
-// 		background-color: #6B7283;
-// 		border: 1px solid #BE757E;
-// 	}
-// }
-//
-// /* phones */
-// @media only screen and (max-width: 360px) {
-//
-// 	p {
-// 		margin-bottom: 10px;
-// 		line-height: 26px;
-// 	}
-//
-// 	#map-canvas{
-// 		height: 100%;
-// 	}
-//
-// 	#control{
-// 		color: #D8D8DD;
-// 		padding: 20px 30px 10px 30px;
-// 	}
-//
-// 	#control input[type=text]{
-// 		width: 100%;
-// 		height: 40px;
-// 		font-size: 24px;
-// 		background-color: #6B7283;
-// 		border: 1px solid #BE757E;
-// 	}
-//
-// 	.learnButton {
-// 		float: left;
-// 		margin: 0px 10px 0px 10px;
-// 		margin-top: 20px;
-// 		margin-bottom: 20px;
-// 		background: #BE757E;
-// 		border: 0;
-// 		color: #D8D8DD;
-// 		height: 37px;
-// 		line-height: 37px;
-// 		width: 40%;
-// 		text-align: center;
-// 	}
-//
-// 	#mc_embed_signup{
-// 		display: none;
-// 	}
-//
-// 	#mc_embed_signup form label{
-// 		margin-bottom: 30px;
-// 		line-height: 20px;
-// 		clear: right;
-// 	}
-//
-// 	#mc_embed_signup form input.email{
-// 		width: 100%;
-// 		height: 40px;
-// 		font-size: 24px;
-// 		background-color: #6B7283;
-// 		border: 1px solid #BE757E;
-// 	}
-// }
-//
-// /* Dropdown Button */
-// .dropbtn {
-//     background-color: #4CAF50;
-//     color: white;
-//     padding: 16px;
-//     font-size: 16px;
-//     border: none;
-//     cursor: pointer;
-// }
-//
-// /* Dropdown button on hover & focus */
-// .dropbtn:hover, .dropbtn:focus {
-//     background-color: #3e8e41;
-// }
-//
-// /* The container <div> - needed to position the dropdown content */
-// .dropdown {
-//     position: relative;
-//     display: inline-block;
-// }
-//
-// /* Dropdown Content (Hidden by Default) */
-// .dropdown-content {
-//     display: none;
-//     position: absolute;
-//     background-color: #f9f9f9;
-//     min-width: 60px;
-//     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-// }
-//
-// /* Links inside the dropdown */
-// .dropdown-content a {
-//     color: black;
-//     padding: 12px 16px;
-//     text-decoration: none;
-//     display: block;
-// }
-//
-// /* Change color of dropdown links on hover */
-// .dropdown-content a:hover {background-color: #f1f1f1}
-//
-// /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-// .show {display:block;}
+.input-large {
+	line-height: 3em;
+}
