--- a/app/assets/stylesheets/startup.scss
+++ b/app/assets/stylesheets/startup.scss
@@ -20,12 +20,16 @@ h1 {
   margin-bottom: 10%;
 }
 
-#add-button {
-  color: black;
+#add-startup-button {
+  color: #5b04ff;
+  margin: 50px 0;
 }
 
 th, td {
   font-size: 1.3em;
 }
+
+
+
 
 // #33334d
