--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                     <li class="nav-links"><%= link_to 'STARTUPS', startups_path %></li>
                     <li class="nav-links"><%= link_to 'INVESTORS', investors_path %></li>
                     <!--modal button-->
-                    <li><button id="modal-button" type="button" data-toggle="modal" data-target="#reg-login-modal">LOGIN/REGISTRATION</button></li>
+                    <li><button class="purple-button" type="button" data-toggle="modal" data-target="#reg-login-modal">LOGIN/REGISTRATION</button></li>
             	    <% end %>
                 </ul>
               </div>
@@ -130,7 +130,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12">
-            <p>A project by <a href="#">Victoria Cartagena, N. Alejandra Estevez, Andres Duarte</a>.</p>
+            <!-- <p>A project by <a href="#">Victoria Cartagena, N. Alejandra Estevez, Andres Duarte</a>.</p> -->
           </div>
         </div>
       </div>
