--- a/app/views/startups/index.html.erb
+++ b/app/views/startups/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row space">
   <div class="col-xs-12 white-font table-border">
     <p id="notice"><%= notice %></p>
 
@@ -35,6 +35,6 @@
 </div>
 <div class="row">
   <div class="col-xs-12 col-md-offset-5">
-  <%= button_to 'Add a new startup', new_startup_path, method:'get', id: 'add-button', class: 'btn'  %>
+  <%= button_to 'Add Startup', new_startup_path, method:'get', class: 'purple-button'  %>
   </div>
 </div>
