worked on new investor form page

--- a/app/views/investors/new.html.erb
+++ b/app/views/investors/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-md-offset-4 col-md-4 form-style">
-  <h1>Add Investor</h1>
+  <div class="col-md-offset-4 col-md-4 form-style new-investor-form">
+  <h1 class="add-investor">Add Investor</h1>
 
   <%= render 'form', investor: @investor %>
 
