--- a/app/assets/stylesheets/investor.scss
+++ b/app/assets/stylesheets/investor.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Investor controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.add-investor {
+  color: white;
+  font-family: 'Roboto', sans-serif !important;
+}
+
+.field-form-group {
+  color: white;
+}
+
+.new-investor-form {
+  background-color: rgba(black, 0.6);
+  margin:.2em 0 1em;
+}
