--- a/app/views/investors/_form.html.erb
+++ b/app/views/investors/_form.html.erb
@@ -11,37 +11,37 @@
     </div>
   <% end %>
 
-  <div class="field form-group">
+  <div class="field-form-group">
     <%= f.label :name %>
     <%= f.text_field :name, class: 'form-control', placeholder: 'Name' %>
   </div>
 
-  <div class="field form-group">
+  <div class="field-form-group">
     <%= f.label :email %>
     <%= f.text_field :email, class: 'form-control', placeholder: 'Email' %>
   </div>
 
-  <div class="field form-group">
+  <div class="field-form-group">
     <%= f.label :website %>
     <%= f.text_field :website, class: 'form-control', placeholder: 'Website' %>
   </div>
 
-  <div class="field form-group">
+  <div class="field-form-group">
     <%= f.label :address %>
     <%= f.text_field :address, class: 'form-control', placeholder: 'Address' %>
   </div>
 
-  <div class="field form-group">
+  <div class="field-form-group">
     <%= f.label :description %>
     <%= f.text_area :description, class: 'form-control', placeholder: 'Description' %>
   </div>
 
-  <div class="field form-group">
+  <div class="field-form-group">
     <%= f.label :founded_date %>
     <%= f.date_select :founded_date, class: 'form-control', placeholder: 'Founded Date' %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions" >
+    <%= f.submit class: "bg-primary" %>
   </div>
 <% end %>
