fixed logo link with turbolinks removed materialize files placed filters in an accordian

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,6 +72,10 @@ ul.nav li.nav-links a:hover {
   border-radius: 20px;
 }
 
+.purple-button:visited {
+  background-color: transparent !important;
+}
+
 .white-font {
 	color: #fff;
 }
