--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css"> -->
 
   <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script> -->
   </head>
 
   <body>
@@ -25,7 +25,7 @@
       <nav id="nav" class="navbar navbar-static-top" role="navigation">
         <div class="container-fluid">
           <div class="row">
-            <%= link_to image_tag("Miami_made_full_white.png", border: 0, width: "150px"), '/', id: "logo", class: "navbar-brand" %>
+            <%= link_to image_tag("Miami_made_full_white.png", border: 0, width: "150px"), root_path, id: "logo", class: "navbar-brand" %>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <!--hamburger-->
               <div class="navbar-header">
@@ -42,7 +42,7 @@
                   <% if current_user %>
                     <li class="nav-links"><%= link_to 'STARTUPS', startups_path %></li>
                     <li class="nav-links"><%= link_to 'INVESTORS', investors_path %></li>
-                    <li class="nav-links">Signed in as <%= current_user.name %></li>
+                    <li class="nav-links">SIGNED IN AS <%= current_user.name %></li>
                     <li class="nav-links"><%= link_to "LOGOUT", logout_path %></li>
                     <% else %>
                     <li class="nav-links"><%= link_to 'STARTUPS', startups_path %></li>
@@ -60,7 +60,7 @@
 
 
       <!-- modal for register/login-->
-      <div class="modal fade bd-example-modal-sm" id="reg-login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal fade" id="reg-login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog modal-sm" role="document">
 
           <div class="modal-content">
