--- a/app/assets/stylesheets/investor.scss
+++ b/app/assets/stylesheets/investor.scss
@@ -12,6 +12,7 @@
 }
 
 .new-investor-form {
-  background-color: rgba(black, 0.6);
-  margin:.2em 0 1em;
+  background-color: rgba(black, 0.7);
+  border-radius: 25px;
+  padding: 20px;
 }
