--- a/app/views/startups/_form.html.erb
+++ b/app/views/startups/_form.html.erb
@@ -41,7 +41,9 @@
     <%= f.date_select :founded_date, class: 'form-control', placeholder: 'Founded Date' %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+
+  <div>
+    <input class="purple-button" type="submit" value="create new startup">
   </div>
-<% end %>
+
+<!-- <% end %> -->
