--- a/app/views/startups/new.html.erb
+++ b/app/views/startups/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <!-- <div class="col-sm-12 col-md-4"></div> -->
-  <div class="col-md-offset-4 col-sm-12 col-md-4 form-style">
-    <h1>New Startup</h1>
+  <div class="col-md-offset-4 col-sm-12 col-md-4 form-style new-startup-form">
+    <h1 class="add-startup">New Startup</h1>
 
     <%= render 'form', startup: @startup %>
 
