--- a/app/assets/stylesheets/startup.scss
+++ b/app/assets/stylesheets/startup.scss
@@ -18,6 +18,8 @@ table {
 h1 {
   text-align: center;
   margin-bottom: 10%;
+  font-size: 4rem;
+  color: #5b04ff;
 }
 
 #add-startup-button {
@@ -28,6 +30,45 @@ h1 {
 th, td {
   font-size: 1.3em;
 }
+
+// style the startup new page
+
+.add-startup {
+  color: #5b04ff !important;
+  font-family: 'Roboto', sans-serif !important;
+}
+
+.field-form-group {
+  background-color: transparent !important;
+  color: #5b04ff !important;
+  padding: 10px 20px !important;
+}
+
+.new-startup-form {
+  background-color: rgba(black, 0.7);
+  border-radius: 25px;
+  padding: 20px;
+}
+
+#error_explanation {
+  color: white;
+}
+a {
+  color: #5b04ff;
+}
+
+th {
+    color: #5b04ff;
+}
+
+#notice {
+  font-family: 'Roboto', sans-serif !important;
+  font-size: 4em;
+}
+
+
+
+
 
 
 
