--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.approve-investors {
+  color: white;
+  font-family: 'Roboto', sans-serif !important;
+}
+
+.approve-startups {
+  color: white;
+  font-family: 'Roboto', sans-serif !important;
+}
+
+.approve-users {
+  color: white;
+  font-family: 'Roboto', sans-serif !important;
+}
+
+.admin-page-fields {
+  color: white;
+  font-family: 'Roboto', sans-serif !important;
+}
