--- a/app/views/investors/_form.html.erb
+++ b/app/views/investors/_form.html.erb
@@ -41,7 +41,7 @@
     <%= f.date_select :founded_date, class: 'form-control', placeholder: 'Founded Date' %>
   </div>
 
-  <div class="actions" >
-    <%= f.submit %>
+  <div>
+    <input class="purple-button" type="submit" value="create new investor">
   </div>
 <% end %>
