--- a/app/views/investors/show.html.erb
+++ b/app/views/investors/show.html.erb
@@ -1,7 +1,7 @@
-<p id="notice"><%= notice %></p>
+<p id="notice new-investor-form"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong> Investor Name: </strong>
   <%= @investor.name %>
 </p>
 
