new information sistem and the filtering

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 
+<!-- We include the gon gem in order to manage a little easier the data moving from the controller to the JS and vs -->
   <%= include_gon %>
   </head>
 
