--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -1,11 +1,11 @@
 
 
-h1#title {
+#sidebar h1#title {
 	font-size: 3em;
 	text-align: center;
 	padding-bottom: 20px;
 	text-align: center;
-	color: #5b04ff;
+	color: #5b04ff !important;
 }
 
 p {
@@ -49,42 +49,3 @@ p {
 #search {
 	margin: 5px 0;
 }
-
-#custom-search-input {
-        margin:0;
-        margin-top: 10px;
-        padding: 0;
-    }
-
-    #custom-search-input .search-query {
-        padding-right: 3px;
-        padding-right: 4px \9;
-        padding-left: 3px;
-        padding-left: 4px \9;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
-
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-    }
-
-    #custom-search-input button {
-        border: 0;
-        background: none;
-        /** belows styles are working good */
-        padding: 2px 5px;
-        margin-top: 2px;
-        position: relative;
-        left: -28px;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-        color:#D9230F;
-    }
-
-    .search-query:focus + button {
-        z-index: 3;
-    }
